# seedtool-cli

./: .dockerignore  .gitignore  .gitmodules  CLA.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  MANUAL.md  Makefile.in  README.md  Usage.md  Windows.md  bootstrap.sh  build.sh  config.h.in  configure  configure.ac  packaging.md  set_build_paths.sh
.github/workflows/: ci.yml  linter.yml  linux.yml  macOS.yml
CLA-signed/: CLA.gorazdko.41F0EA1699A74C1E2FA41B538CF96BC3FF9DBBCE.asc  CLA.md  CLA.secinthenet.4da78f8447e15659ab7e06db0409549979ff5b43.asc  CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.asc
Docs/: Install-Windows.md  MANUAL.md  Usage.md
debian/: README.Debian  README.source  changelog  clean  control  copyright  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  seedtool-cli.cron.d.ex  seedtool-cli.doc-base.ex  watch.ex
debian/patches/: fix-build.diff  series
debian/source/: include-binaries  options
debian/upstream/: metadata.ex
example-scripts/: bip39-to-sskr.sh  sskr-to-bip39.sh
images/logos/: README.md  seedtool-logo-black.psd  seedtool-logo-shapes.ai  seedtool-logo-white.psd  seedtool-screen.psd
src/: .gitignore  Makefile.in  cbor-utils.hpp  cbor.cpp  cbor.hpp  config.h.in  format-base10.c  format-base10.cpp  format-base10.h  format-base10.hpp  format-base6.c  format-base6.cpp  format-base6.h  format-base6.hpp  format-bc32.cpp  format-bc32.hpp  format-bech32.cpp  format-bech32.hpp  format-bip39.c  format-bip39.cpp  format-bip39.h  format-bip39.hpp  format-bits.c  format-bits.cpp  format-bits.h  format-bits.hpp  format-bytewords-minimal.cpp  format-bytewords-minimal.hpp  format-bytewords-uri.cpp  format-bytewords-uri.hpp  format-bytewords.cpp  format-bytewords.hpp  format-cards.c  format-cards.cpp  format-cards.h  format-cards.hpp  format-dice.c  format-dice.cpp  format-dice.h  format-dice.hpp  (+50 more)
